Fixes appearance of buttons on iOS

--- a/app/javascript/application/stylesheets/bootstrap.scss
+++ b/app/javascript/application/stylesheets/bootstrap.scss
@@ -293,7 +293,7 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button;
+  -webkit-appearance: none;
 }
 
 button:not(:disabled),
